objects/Contract_Reviewing__c.object
<CustomObject>
    <fields>
        <fullName>AR_Comments__c</fullName>
        <label>AR Level 1 Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR_Level_1_Rejection_Reason__c</fullName>
        <label>AR Level 1 Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Rule Error</fullName>
                </value>
                <value>
                    <fullName>Start Date Error</fullName>
                </value>
                <value>
                    <fullName>End Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract Total Error</fullName>
                </value>
                <value>
                    <fullName>Liquidation Fees Error</fullName>
                </value>
                <value>
                    <fullName>Opt Out Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract currency incorrect</fullName>
                </value>
                <value>
                    <fullName>Discount allocation issue</fullName>
                </value>
                <value>
                    <fullName>Wrong Entity</fullName>
                </value>
                <value>
                    <fullName>Wrong Feature</fullName>
                </value>
                <value>
                    <fullName>Supporting document not available in CVII</fullName>
                </value>
                <value>
                    <fullName>Customer Approval not available</fullName>
                </value>
                <value>
                    <fullName>Customer name not available</fullName>
                </value>
                <value>
                    <fullName>Fees break up not available</fullName>
                </value>
                <value>
                    <fullName>Quality of Contract</fullName>
                </value>
                <value>
                    <fullName>Wrong upsell format contract paper</fullName>
                </value>
                <value>
                    <fullName>Contract Value currency not mentioned in contract</fullName>
                </value>
                <value>
                    <fullName>Unsigned contract</fullName>
                </value>
                <value>
                    <fullName>Implementation on wrong contract paper</fullName>
                </value>
                <value>
                    <fullName>Bundle sheet not available</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AR_Level_2_Rejection_Reason__c</fullName>
        <label>AR Level 2 Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Rule Error</fullName>
                </value>
                <value>
                    <fullName>Start Date Error</fullName>
                </value>
                <value>
                    <fullName>End Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract Total Error</fullName>
                </value>
                <value>
                    <fullName>Liquidation Fees Error</fullName>
                </value>
                <value>
                    <fullName>Opt Out Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract currency incorrect</fullName>
                </value>
                <value>
                    <fullName>Discount allocation issue</fullName>
                </value>
                <value>
                    <fullName>Wrong Entity</fullName>
                </value>
                <value>
                    <fullName>Wrong Feature</fullName>
                </value>
                <value>
                    <fullName>Supporting document not available in CVII</fullName>
                </value>
                <value>
                    <fullName>Customer Approval not available</fullName>
                </value>
                <value>
                    <fullName>Customer name not available</fullName>
                </value>
                <value>
                    <fullName>Fees break up not available</fullName>
                </value>
                <value>
                    <fullName>Quality of Contract</fullName>
                </value>
                <value>
                    <fullName>Wrong upsell format contract paper</fullName>
                </value>
                <value>
                    <fullName>Contract Value currency not mentioned in contract</fullName>
                </value>
                <value>
                    <fullName>Unsigned contract</fullName>
                </value>
                <value>
                    <fullName>Implementation on wrong contract paper</fullName>
                </value>
                <value>
                    <fullName>Bundle sheet not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AR_Level_3_Rejection_Reason__c</fullName>
        <label>AR Level 3 Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Rule Error</fullName>
                </value>
                <value>
                    <fullName>Start Date Error</fullName>
                </value>
                <value>
                    <fullName>End Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract Total Error</fullName>
                </value>
                <value>
                    <fullName>Liquidation Fees Error</fullName>
                </value>
                <value>
                    <fullName>Opt Out Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract currency incorrect</fullName>
                </value>
                <value>
                    <fullName>Discount allocation issue</fullName>
                </value>
                <value>
                    <fullName>Wrong Entity</fullName>
                </value>
                <value>
                    <fullName>Wrong Feature</fullName>
                </value>
                <value>
                    <fullName>Supporting document not available in CVII</fullName>
                </value>
                <value>
                    <fullName>Customer Approval not available</fullName>
                </value>
                <value>
                    <fullName>Customer name not available</fullName>
                </value>
                <value>
                    <fullName>Fees break up not available</fullName>
                </value>
                <value>
                    <fullName>Quality of Contract</fullName>
                </value>
                <value>
                    <fullName>Wrong upsell format contract paper</fullName>
                </value>
                <value>
                    <fullName>Contract Value currency not mentioned in contract</fullName>
                </value>
                <value>
                    <fullName>Unsigned contract</fullName>
                </value>
                <value>
                    <fullName>Implementation on wrong contract paper</fullName>
                </value>
                <value>
                    <fullName>Bundle sheet not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AR_Post_Rev_Rec_Comments__c</fullName>
        <label>AR Level 2 Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acc_Review_Post_Rev_Rec_OK__c</fullName>
        <label>Accounting Team Level 2 Review OK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_Review_Post_Rev_Rec__c</fullName>
        <label>Accounting Team Level 2 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amit Malhotra</fullName>
                </value>
                <value>
                    <fullName>Jitendra Kumar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_Reviewer_Comments_Hybrid__c</fullName>
        <label>Acc Reviewer Comments (Hybrid)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>CASESAFEID(Opportunity__r.AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Hybrid_Review_Ok__c</fullName>
        <label>Accounting (Hybrid)Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Review_Ok__c</fullName>
        <label>Accounting Team - Level 1 Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Reviewer_Hybrid_Feature__c</fullName>
        <label>Accounting Reviewer(Hybrid Feature)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunil Nassa</fullName>
                </value>
                <value>
                    <fullName>Abhishek Gupta</fullName>
                </value>
                <value>
                    <fullName>Mohak Bhatia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Team_Reviewer__c</fullName>
        <label>Accounting Team Level 1 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abhishek Gupta</fullName>
                </value>
                <value>
                    <fullName>Sunil Nassa</fullName>
                </value>
                <value>
                    <fullName>Mohak Bhatia</fullName>
                </value>
                <value>
                    <fullName>Kapil Budhwani</fullName>
                </value>
                <value>
                    <fullName>Amit Malhotra</fullName>
                </value>
                <value>
                    <fullName>Chakresh Singh</fullName>
                </value>
                <value>
                    <fullName>Deepika Panwar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automated_Invoice_error__c</fullName>
        <label>Automated Invoice error</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Product, Quantity, Unit Price</fullName>
                </value>
                <value>
                    <fullName>Incorrect scheduling</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Note</fullName>
                </value>
                <value>
                    <fullName>Incorrect Ship to address</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing POC</fullName>
                </value>
                <value>
                    <fullName>Incorrect Bill to address</fullName>
                </value>
                <value>
                    <fullName>Credit not applied</fullName>
                </value>
                <value>
                    <fullName>Document not attached in email</fullName>
                </value>
                <value>
                    <fullName>Unit price not hidden</fullName>
                </value>
                <value>
                    <fullName>Net Term Incorrect</fullName>
                </value>
                <value>
                    <fullName>Do not send (EBS)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Header</fullName>
                </value>
                <value>
                    <fullName>Bill to company Name</fullName>
                </value>
                <value>
                    <fullName>Invoicing Instructions not Followed</fullName>
                </value>
                <value>
                    <fullName>Invoice to reflect in contract copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR_Comments__c</fullName>
        <label>CR Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_AR_Level_1_Comments__c</fullName>
        <label>Canx AR Level 1 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_AR_Level_1_Rejection_Reason__c</fullName>
        <label>Canx AR Level 1 Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Rule Error</fullName>
                </value>
                <value>
                    <fullName>Start Date Error</fullName>
                </value>
                <value>
                    <fullName>End Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract Total Error</fullName>
                </value>
                <value>
                    <fullName>Liquidation Fees Error</fullName>
                </value>
                <value>
                    <fullName>Opt Out Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract currency incorrect</fullName>
                </value>
                <value>
                    <fullName>Discount allocation issue</fullName>
                </value>
                <value>
                    <fullName>Wrong Entity</fullName>
                </value>
                <value>
                    <fullName>Wrong Feature</fullName>
                </value>
                <value>
                    <fullName>Supporting document not available in CVII</fullName>
                </value>
                <value>
                    <fullName>Customer Approval not available</fullName>
                </value>
                <value>
                    <fullName>Customer name not available</fullName>
                </value>
                <value>
                    <fullName>Fees break up not available</fullName>
                </value>
                <value>
                    <fullName>Quality of Contract</fullName>
                </value>
                <value>
                    <fullName>Wrong upsell format contract paper</fullName>
                </value>
                <value>
                    <fullName>Contract Value currency not mentioned in contract</fullName>
                </value>
                <value>
                    <fullName>Unsigned contract</fullName>
                </value>
                <value>
                    <fullName>Implementation on wrong contract paper</fullName>
                </value>
                <value>
                    <fullName>Bundle sheet not available</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_AR_Level_2_Comments__c</fullName>
        <label>Canx AR Level 2 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_AR_Level_2_Rejection_Reason__c</fullName>
        <label>Canx AR Level 2 Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Rule Error</fullName>
                </value>
                <value>
                    <fullName>Start Date Error</fullName>
                </value>
                <value>
                    <fullName>End Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract Total Error</fullName>
                </value>
                <value>
                    <fullName>Liquidation Fees Error</fullName>
                </value>
                <value>
                    <fullName>Opt Out Date Error</fullName>
                </value>
                <value>
                    <fullName>Contract currency incorrect</fullName>
                </value>
                <value>
                    <fullName>Discount allocation issue</fullName>
                </value>
                <value>
                    <fullName>Wrong Entity</fullName>
                </value>
                <value>
                    <fullName>Wrong Feature</fullName>
                </value>
                <value>
                    <fullName>Supporting document not available in CVII</fullName>
                </value>
                <value>
                    <fullName>Customer Approval not available</fullName>
                </value>
                <value>
                    <fullName>Customer name not available</fullName>
                </value>
                <value>
                    <fullName>Fees break up not available</fullName>
                </value>
                <value>
                    <fullName>Quality of Contract</fullName>
                </value>
                <value>
                    <fullName>Wrong upsell format contract paper</fullName>
                </value>
                <value>
                    <fullName>Contract Value currency not mentioned in contract</fullName>
                </value>
                <value>
                    <fullName>Unsigned contract</fullName>
                </value>
                <value>
                    <fullName>Implementation on wrong contract paper</fullName>
                </value>
                <value>
                    <fullName>Bundle sheet not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Acc_Reviewer_Comments_Hybrid__c</fullName>
        <label>Canx Acc Reviewer Comments (Hybrid)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Hybrid_Review_Ok__c</fullName>
        <label>Canx Accounting (Hybrid)Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Reviewer_Hybrid_Feature__c</fullName>
        <label>Canx Accounting Reviewer(Hybrid Feature)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunil Nassa</fullName>
                </value>
                <value>
                    <fullName>Abhishek Gupta</fullName>
                </value>
                <value>
                    <fullName>Mohak Bhatia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Team_Level_1_Review_Ok__c</fullName>
        <label>Canx Accounting Team - Level 1 Review Ok</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Team_Level_1_Reviewer__c</fullName>
        <label>Canx Accounting Team Level 1 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunil Nassa</fullName>
                </value>
                <value>
                    <fullName>Abhishek Gupta</fullName>
                </value>
                <value>
                    <fullName>Mohak Bhatia</fullName>
                </value>
                <value>
                    <fullName>Kapil Budhwani</fullName>
                </value>
                <value>
                    <fullName>Amit Malhotra</fullName>
                </value>
                <value>
                    <fullName>Chakresh Singh</fullName>
                </value>
                <value>
                    <fullName>Deepika Panwar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Team_Level_2_Review_OK__c</fullName>
        <label>Canx Accounting Team Level 2 Review OK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Accounting_Team_Level_2_Reviewer__c</fullName>
        <label>Canx Accounting Team Level 2 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jitendra Kumar</fullName>
                </value>
                <value>
                    <fullName>Amit Malhotra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Contract_Review_Comments__c</fullName>
        <label>Canx Contract Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_Contract_Review_Ok__c</fullName>
        <label>Canx Contract Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canx_Contract_Reviewer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Contract_Reviewer__c</fullName>
        <label>Canx Contract Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Tanuj Shrivastava</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Amit Kohli</fullName>
                </value>
                <value>
                    <fullName>Lalit Kashyap</fullName>
                </value>
                <value>
                    <fullName>Purnima Vohra</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Akriti Puri</fullName>
                </value>
                <value>
                    <fullName>Anurag Singh</fullName>
                </value>
                <value>
                    <fullName>Akshay Sachdeva</fullName>
                </value>
                <value>
                    <fullName>Vidhi Sharma</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
                <value>
                    <fullName>Sweta Nanda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Implementation_Team__c</fullName>
        <label>Canx Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Manish Varma</fullName>
                </value>
                <value>
                    <fullName>Vaishali Gandhi</fullName>
                </value>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Gaurav Keshri</fullName>
                </value>
                <value>
                    <fullName>Kartik Beebyan</fullName>
                </value>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                </value>
                <value>
                    <fullName>Ankur Sood</fullName>
                </value>
                <value>
                    <fullName>Avneet Kaur</fullName>
                </value>
                <value>
                    <fullName>Amit Kohli</fullName>
                </value>
                <value>
                    <fullName>Tushar Gautam</fullName>
                </value>
                <value>
                    <fullName>Purnima Vohra</fullName>
                </value>
                <value>
                    <fullName>Akriti Puri</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canx_Team_Comments__c</fullName>
        <label>Canx Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canx_Team_OK__c</fullName>
        <label>Canx Team OK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condition fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Implemented_By__c</fullName>
        <formula>Opportunity__r.Contract_Implemented_by__c</formula>
        <label>Contract Implemented By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Comments__c</fullName>
        <label>Contract Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Date__c</fullName>
        <label>Contract Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Ok__c</fullName>
        <label>Contract Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
                <value>
                    <fullName>Error in other opp</fullName>
                </value>
                <value>
                    <fullName>Error Rectify</fullName>
                </value>
                <value>
                    <fullName>No Review needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Reviewer__c</fullName>
        <label>Contract Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Harish Arora</fullName>
                </value>
                <value>
                    <fullName>Deepshikha Sharma</fullName>
                </value>
                <value>
                    <fullName>Akash Tiwari</fullName>
                </value>
                <value>
                    <fullName>Bishnu Singh</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Akriti Puri</fullName>
                </value>
                <value>
                    <fullName>Poshali Gauba</fullName>
                </value>
                <value>
                    <fullName>Lalit Rawat</fullName>
                </value>
                <value>
                    <fullName>Dimple Kocher</fullName>
                </value>
                <value>
                    <fullName>Lalit Kashyap</fullName>
                </value>
                <value>
                    <fullName>Tushar Gautam</fullName>
                </value>
                <value>
                    <fullName>Ankit Pandey</fullName>
                </value>
                <value>
                    <fullName>Vishal Sharma</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Tushar Vats</fullName>
                </value>
                <value>
                    <fullName>Vishal Gandhi</fullName>
                </value>
                <value>
                    <fullName>Gaurav Singh</fullName>
                </value>
                <value>
                    <fullName>Himanshi Chawla</fullName>
                </value>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                </value>
                <value>
                    <fullName>Aman Singla</fullName>
                </value>
                <value>
                    <fullName>Aastha Dagdi</fullName>
                </value>
                <value>
                    <fullName>Vikas Arora</fullName>
                </value>
                <value>
                    <fullName>Anurag Singh</fullName>
                </value>
                <value>
                    <fullName>Manisha Parti</fullName>
                </value>
                <value>
                    <fullName>Shrishti Singh</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Mohd Suhail</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
                <value>
                    <fullName>Shivangi Gupta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <formula>IF(Opportunity_Stage__c == 'Tract',Opportunity__r.Contract_Total_Tract__c , Opportunity__r.New_Contract_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>